--- a/src/features/Header/HeaderContainer.module.scss
+++ b/src/features/Header/HeaderContainer.module.scss
@@ -1,6 +1,10 @@
 .headerContainer {
+  max-width: 1300px;
+  width:100%;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: center;
 
   button {
     border-radius: 30px;
