--- a/src/features/Profile/Profile.module.scss
+++ b/src/features/Profile/Profile.module.scss
@@ -10,8 +10,8 @@
     align-items: center;
 
     .submitButton {
-      background: #366EFF;
-      box-shadow: 0 4px 18px rgba(54, 110, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+      //background: #366EFF;
+      //box-shadow: 0 4px 18px rgba(54, 110, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
       border-radius: 30px;
       width: 347px;
       height: 36px;
