Sort hook refactoring

--- a/src/features/packs/PacksTable.module.scss
+++ b/src/features/packs/PacksTable.module.scss
@@ -1,23 +1,28 @@
-.descending {
-  &::after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 8px 5px 0 5px;
-    border-color: #000000 transparent transparent transparent;
-  }
+.ascending {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 8px 5px 0 5px;
+  border-color: #000000 transparent transparent transparent;
+
 }
 
-.ascending {
-  &::before {
-    content: '';
-    display: block;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0 5px 8px 5px;
-    border-color: transparent transparent #000000 transparent;
-  }
+.descending {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 5px 8px 5px;
+  border-color: transparent transparent #000000 transparent;
+
+}
+
+.neutral {
+  content: '';
+  width: 8px;
+  height: 2px;
+  background-color: #000000;
 }
