--- a/src/common/header/HeaderContainer.module.scss
+++ b/src/common/header/HeaderContainer.module.scss
@@ -1,16 +1,32 @@
-.headerContainer {
-  max-width: 1300px;
-  width:100%;
-  margin: 0 auto;
+
+.header {
+  background: #FCFCFC;
+  box-shadow: 0 2px 10px rgba(109, 109, 109, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+  height: 60px;
+  padding: 0;
   display: flex;
-  justify-content: space-between;
   align-items: center;
 
-  button {
-    border-radius: 30px;
-    background: #366EFF;
-    box-shadow: 0 4px 18px rgba(54, 110, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
-    width: 113px;
-    height: 36px;
+  .headerContainer {
+    max-width: 1300px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    button {
+      border-radius: 30px;
+      background: #366EFF;
+      box-shadow: 0 4px 18px rgba(54, 110, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+      width: 113px;
+      height: 36px;
+    }
   }
+
+
+}
+.progress {
+  height: 10px;
+  width: 100%;
 }
